# i18

./: .dist.env  .gitignore  Cargo.toml  README.md  conf.tar.gpg  dist.conf  package.json  test.sh
.github/workflows/: build.yml  dist.yml  ver.yml
sh/: confPack.sh  confUnpack.sh  upgrade.sh  ver.sh
src/: main.rs  recv.rs  scan.rs  scan_tran.rs  src.rs  term.rs  tran_yml.rs
test/.i18n/: src.yml
test/ar/: i18n.yml
test/bg/: i18n.yml
test/bn/: i18n.yml
test/cs/: i18n.yml
test/da/: i18n.yml
test/de/: i18n.yml
test/el/: i18n.yml
test/en/: i18n.yml
test/es/: i18n.yml
test/et/: i18n.yml
test/fi/: i18n.yml
test/fr/: i18n.yml
test/gu/: i18n.yml
test/hi/: i18n.yml
test/hr/: i18n.yml
test/hu/: i18n.yml
test/id/: i18n.yml
test/it/: i18n.yml
test/iw/: i18n.yml
test/ja/: i18n.yml
test/kn/: i18n.yml
test/ko/: i18n.yml
test/lt/: i18n.yml
test/lv/: i18n.yml
test/ml/: i18n.yml
test/mr/: i18n.yml
test/nl/: i18n.yml
test/no/: i18n.yml
test/pl/: i18n.yml
test/pt/: i18n.yml
test/ro/: i18n.yml
test/ru/: i18n.yml
test/sk/: i18n.yml
test/sl/: i18n.yml
test/sr/: i18n.yml
test/sv/: i18n.yml
test/sw/: i18n.yml
test/ta/: i18n.yml
test/te/: i18n.yml
test/th/: i18n.yml
test/tr/: i18n.yml
test/uk/: i18n.yml
test/ur/: i18n.yml
test/vi/: i18n.yml
test/zh-TW/: i18n.yml
